2004-07-01  John Luke  <jluke@cfl.rr.com>

	* AssemblyInfo.cs.in: clean up and add some informaition used below
	* Makefile.am: add Mono.GetOptions reference and new file
	* MonoDevelopOptions.cs: new file for handling options
	* MonoDevelopMain.cs: begin using MonoDevelopOptions

2004-07-01  Todd Berman  <tberman@off.net>

	* MonoDevelopMain.cs: Dont attempt to load 0 length filenames.

2004-06-28  Todd Berman  <tberman@off.net>

	* MonoDevelopMain.cs: add Exit (0); and poof, issues are gone.

2004-05-24  Todd Berman  <tberman@sevenl.net>

	* Makefile.am: add Mono.Posix reference
	* MonoDevelopMain.cs: Use a unix socket to only allow one instance of
	MD to be open at a time. This should eventually use something like
	dbus or something else instead of a unix socket. Also, a --new-process
	arg should be added or something similar to allow more than one
	open copy of MD at a time.

2004-04-19  Todd Berman  <tberman@sevenl.net>

	* Makefile.am: only link the one .resources file we need.

2004-04-07  John Luke  <jluke@cfl.rr.com>

	* MonoDevelopMain.cs: use reflection for the name and version

2004-04-02  Todd Berman  <tberman@sevenl.net>

	* MonoDevelopMain.cs: move SharpDevelopMain.cs... damn i love svn.

2004-04-02  Todd Berman  <tberman@sevenl.net>

	* SharpDevelopMain.cs: bump to 0.3