@@ -9,6 +9,14 @@ namespace MonoDevelop
 		{
 			base.ParsingMode = OptionsParsingMode.Both;
 		}
+
+		// FIXME: we really ignore this, but this allows
+		// us to know it is ok to reuse the socket
+		[Option ("Start with this file open.", 'f')]
+		public bool file;
+
+		[Option ("Do not display splash screen.")]
+		public bool nologo;
 	}
 }
 
